fix headline overflow and different card sizes on small mobile devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -158,6 +158,7 @@ h3.stage {
 h3.overlay-hl {
   color: white;
   text-shadow: none;
+  word-break: break-word;
 }
 
 h4 {
@@ -170,6 +171,7 @@ h5 {
   color: white;
   font-size: 2em;
   margin: 0.6em 0 0.2em 0;
+  word-break: break-word;
 }
 
 video {
@@ -284,11 +286,11 @@ span.btn-details {
   position: relative;
   flex-direction: column;
   justify-content: flex-start;
+  min-width: 280px;
   width: 300px;
   height: 420px;
   box-shadow: -1px 2px 4px rgba(0,0,0,0.4), 1px -2px 4px rgba(255,255,255,0.7);
   border-radius: 20px;
-  /* border: solid 1px #b0b0b0; */
   margin: 2em 1em;
   filter: saturate(0.5);
   transition: all 0.5s ease-in-out 0s;
@@ -738,7 +740,7 @@ table.normal tr.highlight {
 
 table.normal th, table.normal td {
   padding: 0.5em;
-  font-size: 0.8em;
+  font-size: 0.7em;
 }
 
 table.normal th {
@@ -1196,7 +1198,7 @@ div.icon-wrapper object {
     font-size: 3.5em;
   }
   h2 {
-    font-size: 3em;
+    font-size: 2.5em;
   }
   h3 {
     font-size: 2em;
